--- a/mynumpy.ipynb
+++ b/mynumpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,19 +144,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "[0.23145735]\n"
      ]
     }
    ],
    "source": [
-    "print(np.random.randint(0,1))"
+    "print(np.random.rand(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.63081103 -0.0149192   0.53572841 -0.26214227 -0.62415252  0.84479841\n",
+      " -1.37640663  2.61044986 -0.72184766 -0.12443027 -0.34275448  0.454749\n",
+      "  0.23545971  1.96207345 -1.32930297  0.0370747  -1.23768188  1.52790882\n",
+      "  0.38078572  1.10965419  0.36328087 -0.11105329  0.66833619 -1.46076893\n",
+      "  0.78884182]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.random.randn(25))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.01 0.02 0.03 0.04 0.05 0.06 0.07 0.08 0.09 0.1 ]\n",
+      " [0.11 0.12 0.13 0.14 0.15 0.16 0.17 0.18 0.19 0.2 ]\n",
+      " [0.21 0.22 0.23 0.24 0.25 0.26 0.27 0.28 0.29 0.3 ]\n",
+      " [0.31 0.32 0.33 0.34 0.35 0.36 0.37 0.38 0.39 0.4 ]\n",
+      " [0.41 0.42 0.43 0.44 0.45 0.46 0.47 0.48 0.49 0.5 ]\n",
+      " [0.51 0.52 0.53 0.54 0.55 0.56 0.57 0.58 0.59 0.6 ]\n",
+      " [0.61 0.62 0.63 0.64 0.65 0.66 0.67 0.68 0.69 0.7 ]\n",
+      " [0.71 0.72 0.73 0.74 0.75 0.76 0.77 0.78 0.79 0.8 ]\n",
+      " [0.81 0.82 0.83 0.84 0.85 0.86 0.87 0.88 0.89 0.9 ]\n",
+      " [0.91 0.92 0.93 0.94 0.95 0.96 0.97 0.98 0.99 1.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.linspace(0.01,1,100).reshape(10,10)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.05263158 0.10526316 0.15789474 0.21052632 0.26315789\n",
+      " 0.31578947 0.36842105 0.42105263 0.47368421 0.52631579 0.57894737\n",
+      " 0.63157895 0.68421053 0.73684211 0.78947368 0.84210526 0.89473684\n",
+      " 0.94736842 1.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.linspace(0,1,20)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4,  5],\n",
+       "       [ 6,  7,  8,  9, 10],\n",
+       "       [11, 12, 13, 14, 15],\n",
+       "       [16, 17, 18, 19, 20],\n",
+       "       [21, 22, 23, 24, 25]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat = np.arange(1,26).reshape(5,5)\n",
+    "mat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[12, 13, 14, 15],\n",
+       "       [17, 18, 19, 20],\n",
+       "       [22, 23, 24, 25]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat[2:,1:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat[3,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2],\n",
+       "       [ 7],\n",
+       "       [12]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat[:3,1:2]"
    ]
   },
   {
@@ -165,19 +323,79 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-0.68911131  0.03820894 -1.11336748  1.52443005  0.58461281  0.06076639\n",
-      "  0.54499402  0.20873822 -0.529384   -0.65046241  0.63260935  1.17584798\n",
-      " -0.40851037  0.56352924  0.02218949  0.92969838  0.42338878  1.38666862\n",
-      " -0.17011808 -0.43357487 -2.10429158  0.85480702 -0.56865251  0.71507352\n",
-      " -2.01403285]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([21, 22, 23, 24, 25])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(np.random.normal(0,1,25))"
+    "mat[4,]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[16, 17, 18, 19, 20],\n",
+       "       [21, 22, 23, 24, 25]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat[3:,]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "325"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(mat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.211102550927978"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(mat)"
    ]
   },
   {
@@ -185,7 +403,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np,"
+   ]
   }
  ],
  "metadata": {
