--- a/pandaexercises.ipynb
+++ b/pandaexercises.ipynb
@@ -1915,6 +1915,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Transit Operator                7036\n",
+       "Special Nurse                   4389\n",
+       "Registered Nurse                3736\n",
+       "Public Svc Aide-Public Works    2518\n",
+       "Police Officer 3                2421\n",
+       "Name: JobTitle, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sal['JobTitle'].value_counts().head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
